assets/css/styles.scss
/* ... */
html, body {
    font-family: $typeface;
    margin:0;
    padding:0;
    height:100%;
}


h1,h2,h3,h4,h5,h6 {
    font-weight: 800;
    font-stretch: expanded 1.1;
}

.entry-title h1 {
    color: $teal;
    padding: 0;
    margin: 0 5px;
    padding: 50px 10px 15px 50px;
    font-family: Gill Sans;
    font-weight: 600;
}

h1 {
    color: $darkteal;
    margin: 0 5px;
    padding: 0;
    padding: 50px 10px 15px 50px;
}

h2 {
    color: $bright;
    margin: 0 5px;
    padding: 0;
    padding: 50px 10px 15px 50px;
}

h3 {
    color: $darkgrey;
    margin: 0 5px;
    padding: 0;
    padding: 50px 10px 15px 50px;
}

h4 {
    color: $darkteal;
    margin: 0 5px;
    padding: 0;
    font-size: 0.90em;
    padding: 50px 10px 15px 50px;
}

h5 {
    color: $bright;
    margin: 0 5px;
    padding: 0;
    font-size: 0.90em
}

h6 {
    color: $darkgrey;
    margin: 0 5px;
    padding: 0;
    font-size: 0.90em;
}



p {
    text-align: justify;
    font-size: 12;
    font-weight: 400;
    padding: 5px 50px;
}

p.bright {
    color:$bright;
    padding: 5px 25px;
}

p.entry-paragraph {
    padding: 50px 55px;
}

a {
    color: $teal;
}

a:hover {
    color: $grey;
}

/* This is the header and navigation section of the website styles */

header {
    height: 295px;
    background: linear-gradient(#c1e2ff 0%, #fff 11.33%, #fff 27.84%, #ffffd5 78.33%, #fdf991 83.25%, #f2d32a 84.24%, #cbbe73 88.67%, #a3dfff 96.06%, #007f9d 97.54%, #005226 100%);
    border: 1px solid #707070;
    vertical-align: bottom;
    position: relative;
    z-index: 9999;
}


.logo {
    float:left;
    height: 75px;
    width: auto;
    padding: 5px;
}

/* Menu and Navigation Section */

.menu div {
    float: right;
    height: 40px;
    vertical-align: bottom;
}

.menu::after, .menu::before {
    box-sizing: unset!important;
    }

nav {
    min-width: 70px;
    width: auto;
    right: 0;
    vertical-align: bottom;
    text-align: center;
    align-items: baseline;
    height: 16px;
    position: absolute;
    bottom: 0px;
    display: inline-block;
    font-size: 15pt;
    padding: 21px;
    white-space: nowrap;
    text-overflow: ellipsis;
}

nav a{
    padding: 15px 15px;
    text-decoration:none;
    color: $grey;
}

nav::after, nav::before {
    box-sizing: unset!important;
    }

nav a:hover{
    padding: 15px 15px;
    text-decoration:none;
    color: $teal;
    background-color:$transparent-bk;
}

nav a:active, .active {
    padding: 15px 15px;
    text-decoration:none;
    color: $teal;
}

nav a:active:hover, .active:hover {
    padding: 15px 15px;
    text-decoration:none;
    color: $darkteal;
    background-color:$transparent-bk;
}

/* Hero Image Section */

.hero {
    height: 200px;
    display:block;
    position: relative;
    z-index: 8000;
}

#hero-text-position {
    vertical-align:bottom;
    padding-bottom: 20px;
    padding-top:180px;
    max-width:75%;
}

.hero-title div, .hero-title h1{
    height: 47px;
    background-color: $transparent-bk;
    animation: flyIn 3s;
    animation-delay: 0s;
}

.hero-title h1 {
    color: $blue;
    font-size: 1.1;
    font-family: Gill Sans;
    font-style: italic;
    padding: 15px 15px  15px 50px;
    margin:20px;
}


.hero_image1 {
    background: url(assets/images/hero-image1.jpg);
    @include hero-large();
    @include heroImage();
}

.hero_image2 {
        background: url(assets/images/hero-image2.jpg);
        @include hero-large();
        @include heroImage();
}

.hero_image3 {
        background: url(assets/images/hero-image3.jpg);
        @include hero-large();
        @include heroImage();
}

.hero_image4 {
        background: url(assets/images/hero-image4.jpg);
        @include hero-large();
        @include heroImage();
}

.hero_image5 {
        background: url(assets/images/hero-image5.jpg);
        @include hero-large();
        @include heroImage();
}

/* _____________________ Main Content Section ___________________  */

/* Home Page */

.intro-box {
@include larger-ibox();
color:$bright;
font-weight:900;
font-size:14pt;
display: inline-block;
}

.box1 {
    background-color: $gold;
}

.box2 {
    background-color: $smokeblue;
}

.box3 {
    background-color: $lightgrey;
}

.box4 {
    background-color: $lighterteal;
}

.content-box {
    min-height: 150px;
    max-height: 250px;
    min-width: 150px;
    max-width: 250px;
    margin: 0;
    padding: 25px;
}

section {
    min-height: 150px;
    height: auto;
    padding: 0;
    margin: 0;
    width:100%;
}

#index_one {
    background-color: $bright;
    vertical-align: middle;
    width:100%;
}

#index_two {
    background-color: $lightblue;
    vertical-align: middle;
    width:100%;
}

#index_three {
    background-color: $lightbeige;
    width:100%;

}

#index_four {
    background-color: $lighterteal;
    width:100%;
}


/* _______ This is the footer section ________ */

footer {
    clear: both;
    height: 60px;
    padding: 5px 0 0 0;
    border-top: 1px solid black;
    box-shadow: rgba(0,0,0,20) 2px 0px 3px;
    background-color: #b7af8c;
    color: #363545;
    font-weight: 700;
    font-size: 0.75em;
    width:100%;
    left:0;
    position:absolute;
    bottom:0;
    display:block;
}
/* ... */

